# RAG_SYSTEM

./: .env.example  .flake8  .gitattributes  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  guardrails.py  ingest.py  llm.py  logging_config.py  pyproject.toml  rag_pipeline.py  requirements-dev.txt  requirements.txt  reranker.py  test_gemini.py  utils.py
chroma_db/: chroma.sqlite3  index_manifest.json
tests/: conftest.py  test_main.py
